--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
     <p>Access to company network resources is not allowed</p>
   </body>
   
-  <button style="border: none fill:white" href="/none"></button>
+  <button style="border: none; fill:white; background:white;" href="/none"></button>
 </html>
