--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
     <title>Network</title>
   </head>
   
+  <style>
+    button {
+      border: none; fill:white; background:white;
+    }
+    
+    button:hover {
+      border: black; fill:white; background:black;
+    }
+  </style>
+  
   <body>
     <p>Access to company network resources is not allowed</p>
   </body>
   
-  <button style="border: none; fill:white; background:white;" href="/none"></button>
+  <button style="border: none; fill:white; background:white;" href="/none">          A          </button>
 </html>
